fix: fix pre code too long style error

--- a/src/pages/IM/index.less
+++ b/src/pages/IM/index.less
@@ -97,13 +97,12 @@
     position: absolute;
     bottom: 0px;
     box-shadow: none !important;
-    padding-right: 70px;
+    padding: 4px 70px 4px 10px;
     width: 100%;
     border: 1px solid #eee;
     background-color: #fff;
     border-radius: 2px;
     outline: none;
-    padding: 4px 10px;
     overflow: auto;
     max-height: 260px;
     -webkit-user-select: auto;
@@ -259,6 +258,12 @@
       a {
         color: #126dda;
       }
+
+      pre {
+        overflow: hidden;
+        word-break: break-all;
+        white-space: break-spaces;
+      }
     }
   }
 
@@ -303,7 +308,7 @@
   .im-footer {
     .msg-input {
       img {
-        max-width: 200px;
+        max-width: 300px;
       }
     }
   }
